Set max-width for the name to avoid overlaping value (better but still not perfect)

--- a/custom.css
+++ b/custom.css
@@ -422,6 +422,7 @@ div.bannercontent .row.divider{
   position: absolute;
   top: 10%;
   left: 5%;
+  max-width: 60%;
 }
 
 @media (min-width: 1200px) {
